--- a/src/components/dashboard/dashboard.component.html
+++ b/src/components/dashboard/dashboard.component.html
@@ -103,7 +103,7 @@
               </td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-slate-300">{{ record.uspNumber }}/{{ record.rccNumber
                 }}/{{ record.mspNumber }}</td>
-              <td class="px-6 py-4 whitespace-nowrap text-sm text-slate-400">{{ record.last_updated_by }}</td>
+              <td class="px-6 py-4 whitespace-nowrap text-sm text-slate-400">{{ record.lastUpdatedBy }}</td>
               <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
                 <div class="flex items-center justify-end gap-2">
                   @if(canEdit(record)) {
